feat: 跨图合并、用量限制与自定义API

--- a/server/.env.example
+++ b/server/.env.example
@@ -15,3 +15,8 @@ MODEL2_BASE_URL=https://api.openai.com/v1
 
 # 博弈配置
 MAX_DEBATE_ITERATIONS=3
+
+# 用量控制（按浏览器指纹 X-AAS-Fingerprint）
+# 每 windowHours 小时最多使用 limitTokens token（留空则不限制）
+USAGE_LIMIT_TOKENS=
+USAGE_LIMIT_WINDOW_HOURS=24
