feat:自动路由模型

--- a/server/.env.example
+++ b/server/.env.example
@@ -4,7 +4,57 @@ OPENAI_BASE_URL=https://api.openai.com/v1
 OPENAI_MODEL=gpt-4o
 OPENAI_MAX_TOKENS=
 
-# 多模型博弈配置
+# 路由模型（可选）：用于“自动路由”模式判断文科/理科
+# 留空则默认复用 OPENAI_API_KEY / OPENAI_BASE_URL
+ROUTER_MODEL=gpt-4o-mini
+ROUTER_API_KEY=
+ROUTER_BASE_URL=
+
+# 自动路由策略
+# - 文科默认单模型，理科默认双模型审查（可自行调整）
+ROUTE_HUMANITIES_MODE=single
+ROUTE_SCIENCE_MODE=debate
+ROUTE_DEFAULT_MODE=debate
+ROUTE_UNKNOWN_MODE=
+
+# 自动路由下：单模型模型列表（逗号分隔，取第一个；未配置则使用 OPENAI_MODEL；若请求里带 X-AAS-Model，则以请求为准）
+ROUTE_HUMANITIES_SINGLE_MODELS=
+ROUTE_SCIENCE_SINGLE_MODELS=
+ROUTE_UNKNOWN_SINGLE_MODELS=
+
+# 兼容旧写法（等价于 *_SINGLE_MODELS 只有 1 个）
+ROUTE_HUMANITIES_MODEL=
+ROUTE_SCIENCE_MODEL=
+ROUTE_UNKNOWN_MODEL=
+
+# 自动路由下：双模型审查模型列表（逗号分隔，对应模型1、模型2；未配置则使用下方 MODEL1/2_*）
+ROUTE_HUMANITIES_DEBATE_MODELS=
+ROUTE_SCIENCE_DEBATE_MODELS=
+ROUTE_UNKNOWN_DEBATE_MODELS=
+
+# 自动路由下：双模型审查可按学科覆盖模型1/2的名称/Key/BaseURL（优先级低于请求头 X-AAS-* 覆盖）
+ROUTE_HUMANITIES_DEBATE_MODEL1_NAME=
+ROUTE_HUMANITIES_DEBATE_MODEL1_API_KEY=
+ROUTE_HUMANITIES_DEBATE_MODEL1_BASE_URL=
+ROUTE_HUMANITIES_DEBATE_MODEL2_NAME=
+ROUTE_HUMANITIES_DEBATE_MODEL2_API_KEY=
+ROUTE_HUMANITIES_DEBATE_MODEL2_BASE_URL=
+
+ROUTE_SCIENCE_DEBATE_MODEL1_NAME=
+ROUTE_SCIENCE_DEBATE_MODEL1_API_KEY=
+ROUTE_SCIENCE_DEBATE_MODEL1_BASE_URL=
+ROUTE_SCIENCE_DEBATE_MODEL2_NAME=
+ROUTE_SCIENCE_DEBATE_MODEL2_API_KEY=
+ROUTE_SCIENCE_DEBATE_MODEL2_BASE_URL=
+
+ROUTE_UNKNOWN_DEBATE_MODEL1_NAME=
+ROUTE_UNKNOWN_DEBATE_MODEL1_API_KEY=
+ROUTE_UNKNOWN_DEBATE_MODEL1_BASE_URL=
+ROUTE_UNKNOWN_DEBATE_MODEL2_NAME=
+ROUTE_UNKNOWN_DEBATE_MODEL2_API_KEY=
+ROUTE_UNKNOWN_DEBATE_MODEL2_BASE_URL=
+
+# 双模型审查配置（可选，供自动路由在需要时使用）
 MODEL1_NAME=gpt-4o-mini
 MODEL1_API_KEY=your_model1_api_key_here
 MODEL1_BASE_URL=https://api.openai.com/v1
@@ -13,7 +63,7 @@ MODEL2_NAME=gpt-4o
 MODEL2_API_KEY=your_model2_api_key_here
 MODEL2_BASE_URL=https://api.openai.com/v1
 
-# 博弈配置
+# 审查迭代次数
 MAX_DEBATE_ITERATIONS=3
 
 # 用量控制（按浏览器指纹 X-AAS-Fingerprint）
