--- a/server/.env.example
+++ b/server/.env.example
@@ -4,6 +4,11 @@ OPENAI_BASE_URL=https://api.openai.com/v1
 OPENAI_MODEL=gpt-4o
 OPENAI_MAX_TOKENS=
 
+# MCP（理科调用工具）
+MCP_PYTHON_ENABLED=1
+MCP_PYTHON_URL=http://127.0.0.1:8080/method/execute_python
+MCP_PYTHON_TIMEOUT_MS=120000
+
 # 路由模型（可选）：用于“自动路由”模式判断文科/理科
 # 留空则默认复用 OPENAI_API_KEY / OPENAI_BASE_URL
 ROUTER_MODEL=gpt-4o-mini
