--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "AI搜题网页应用",
   "scripts": {
-    "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
+    "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\" \"npm run dev:mcp\"",
     "dev:client": "cd client && npm run dev",
     "dev:server": "cd server && npm run dev",
-    "install:all": "npm install && cd client && npm install && cd ../server && npm install"
+    "dev:mcp": "cd tools/mcp_python && npm run build && npm start",
+    "install:all": "npm install && cd client && npm install && cd ../server && npm install && cd ../tools/mcp_python && npm install"
   },
   "keywords": ["ai", "question-solver", "ocr"],
   "author": "",
