feat:知识库，docker

--- a/server/.env.example
+++ b/server/.env.example
@@ -4,6 +4,10 @@ OPENAI_BASE_URL=https://api.openai.com/v1
 OPENAI_MODEL=gpt-4o
 OPENAI_MAX_TOKENS=
 
+# 自定义 API：可选模型列表（逗号分隔）。用于前端“自定义 API”里下拉选择模型。
+# 留空则从 OPENAI_MODEL / ROUTER_MODEL / MODEL1/2_NAME / ROUTE_* 等配置里自动汇总。
+AAS_MODEL_LIST=
+
 # MCP（理科调用工具）
 MCP_PYTHON_ENABLED=1
 MCP_PYTHON_URL=http://127.0.0.1:8080/method/execute_python
