--- a/server/package.json
+++ b/server/package.json
@@ -14,14 +14,18 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "iconv-lite": "^0.7.2",
     "multer": "^1.4.5-lts.1",
-    "openai": "^4.20.0"
+    "openai": "^4.20.0",
+    "pdf-parse": "^2.4.5",
+    "pdf-to-png-converter": "^3.11.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.0",
+    "@types/pdf-parse": "^1.1.5",
     "tsx": "^4.7.0",
     "typescript": "^5.3.2"
   }
