--- a/server/.env.example
+++ b/server/.env.example
@@ -13,6 +13,14 @@ MCP_PYTHON_ENABLED=1
 MCP_PYTHON_URL=http://127.0.0.1:8080/method/execute_python
 MCP_PYTHON_TIMEOUT_MS=120000
 
+# PDF 解析（知识库上传 PDF 时可能触发图片回退 OCR）
+# 图片回退每页都会调用一次视觉模型，建议限制页数避免成本/耗时失控。
+PDF_IMAGE_FALLBACK_MAX_PAGES=6
+
+# 知识库（按浏览器指纹会话，默认仅内存保存）
+KB_MAX_FILES=20
+KB_MAX_TOTAL_BYTES=52428800
+
 # 路由模型（可选）：用于“自动路由”模式判断文科/理科
 # 留空则默认复用 OPENAI_API_KEY / OPENAI_BASE_URL
 ROUTER_MODEL=gpt-4o-mini
