--- a/server/.env.example
+++ b/server/.env.example
@@ -6,6 +6,8 @@ OPENAI_MAX_TOKENS=
 
 # 自定义 API：可选模型列表（逗号分隔）。用于前端“自定义 API”里下拉选择模型。
 # 留空则从 OPENAI_MODEL / ROUTER_MODEL / MODEL1/2_NAME / ROUTE_* 等配置里自动汇总。
+# Optional: model list for the frontend "Custom API" dropdown (comma-separated).
+# If empty, the server will auto-collect from OPENAI_MODEL / ROUTER_MODEL / MODEL1/2_NAME / ROUTE_* etc.
 AAS_MODEL_LIST=
 
 # MCP（理科调用工具）
@@ -23,12 +25,18 @@ KB_MAX_TOTAL_BYTES=52428800
 
 # 路由模型（可选）：用于“自动路由”模式判断文科/理科
 # 留空则默认复用 OPENAI_API_KEY / OPENAI_BASE_URL
+# Subject (humanities/science)
+# The UI now sends `subject` per page. If `subject` is NOT provided by the client,
+# the server falls back to this router model to auto-classify humanities/science.
+# Leave empty to reuse OPENAI_API_KEY / OPENAI_BASE_URL.
 ROUTER_MODEL=gpt-4o-mini
 ROUTER_API_KEY=
 ROUTER_BASE_URL=
 
 # 自动路由策略
 # - 文科默认单模型，理科默认双模型审查（可自行调整）
+# Policy when `mode=auto` (per question)
+# - humanities defaults to single, science defaults to debate (tweak as needed)
 ROUTE_HUMANITIES_MODE=single
 ROUTE_SCIENCE_MODE=debate
 ROUTE_DEFAULT_MODE=debate
