--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -2,6 +2,9 @@ server {
   listen 80;
   server_name _;
 
+  # Default is 1m; typical screenshots/photos exceed it.
+  client_max_body_size 25m;
+
   root /usr/share/nginx/html;
   index index.html;
 
