--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -47,6 +47,8 @@ services:
     restart: unless-stopped
     expose:
       - "80"
+    volumes:
+      - ./client/nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       api:
         condition: service_healthy
