--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -2,6 +2,8 @@
   "name": "aas-desktop",
   "private": true,
   "version": "0.0.0",
+  "description": "AAS Desktop App",
+  "homepage": "https://github.com/crcdlixx/AAS",
   "type": "module",
   "main": "src/main.mjs",
   "author": {
@@ -47,6 +49,7 @@
     },
     "linux": {
       "maintainer": "AAS <dev@example.com>",
+      "category": "Utility",
       "target": [
         "AppImage",
         "deb"
