--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -3,7 +3,7 @@ name: Build Desktop/Mobile Apps
 on:
   push:
     branches: ["**"]
-    tags: ["V*"]
+    tags: ["V*", "v*"]
   workflow_dispatch:
 
 permissions:
@@ -34,10 +34,15 @@ jobs:
           cache: npm
           cache-dependency-path: |
             client/package-lock.json
+            server/package-lock.json
             apps/desktop/package-lock.json
 
       - name: Install client deps
         working-directory: client
+        run: npm ci
+
+      - name: Install server deps
+        working-directory: server
         run: npm ci
 
       - name: Install desktop deps
@@ -241,7 +246,7 @@ jobs:
     name: Draft GitHub Release (V* tags)
     runs-on: ubuntu-latest
     needs: [desktop, android, ios, mobile]
-    if: startsWith(github.ref, 'refs/tags/V')
+    if: github.ref_type == 'tag' && (startsWith(github.ref_name, 'V') || startsWith(github.ref_name, 'v'))
     steps:
       - name: Download all artifacts
         uses: actions/download-artifact@v4
