--- a/server/.env.example
+++ b/server/.env.example
@@ -7,7 +7,8 @@ OPENAI_MAX_TOKENS=
 # 自定义 API：可选模型列表（逗号分隔）。用于前端“自定义 API”里下拉选择模型。
 # 留空则从 OPENAI_MODEL / ROUTER_MODEL / MODEL1/2_NAME / ROUTE_* 等配置里自动汇总。
 # Optional: model list for the frontend "Custom API" dropdown (comma-separated).
-# If empty, the server will auto-collect from OPENAI_MODEL / ROUTER_MODEL / MODEL1/2_NAME / ROUTE_* etc.
+# DEPRECATED: AAS_MODEL_LIST
+# The server now fetches the model list from the configured API (`GET /v1/models`), including Custom API overrides.
 AAS_MODEL_LIST=
 
 # MCP（理科调用工具）
@@ -22,6 +23,16 @@ PDF_IMAGE_FALLBACK_MAX_PAGES=6
 # 知识库（按浏览器指纹会话，默认仅内存保存）
 KB_MAX_FILES=20
 KB_MAX_TOTAL_BYTES=52428800
+
+# 知识库 RAG（检索增强）
+# - 上传时会分块；解题/追问时按题目检索相关块并让模型“基于参考资料校对补充”。
+# - 默认使用 OpenAI embeddings（若 embeddings 不可用会自动降级为关键词检索）。
+KB_RAG_ENABLED=1
+KB_CHUNK_TOKENS=500
+KB_CHUNK_OVERLAP_TOKENS=80
+KB_TOP_K=8
+KB_EMBEDDING_MODEL=text-embedding-3-small
+KB_EMBEDDING_BATCH_SIZE=64
 
 # 路由模型（可选）：用于“自动路由”模式判断文科/理科
 # 留空则默认复用 OPENAI_API_KEY / OPENAI_BASE_URL
