--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
+    "test": "npm run build && node --test dist/services/openai.streamEvents.test.js",
     "start": "node dist/index.js"
   },
   "dependencies": {
